完成消息栏中通知和消息的recycleView展示；辅助开源库实现左滑删除Item的项目（其中用自定义的Adapter，并用自定义Listener接口实现）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.lqr.optionitemview:library:1.0.7'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
 }
